clean up admin user management pages; add record form fields (still needs models)

--- a/intex2/Pages/Roles/_Layout.cshtml
+++ b/intex2/Pages/Roles/_Layout.cshtml
@@ -95,8 +95,8 @@
                         <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Research</span>
                         <ul>
                             <li><a href="/Account/Login">Login</a></li>
-                            <li><a href="/Account/Login">Add Record</a></li>
-                            <li><a href="/Account/Login">View Records</a></li>
+                            <li><a href="/Users/SingleEntry">Add Record</a></li>
+                            <li><a href="/">View Records</a></li>
                         </ul>
                     </div>
                     <!-- end footer column -->
