--- a/intex2/Pages/Roles/Editor.cshtml
+++ b/intex2/Pages/Roles/Editor.cshtml
@@ -15,7 +15,7 @@
         <div class="row margin-5-half-rem-bottom align-items-center">
             <div class="col-12 col-lg-6 col-md-7 text-center text-md-left sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
                 <h5 class="alt-font font-weight-600 text-extra-dark-gray letter-spacing-minus-1px text-uppercase margin-5px-bottom">Edit Role: @Model.Role.Name</h5>
-                <p class="m-0 d-block">Edit the table below to manage the roles within the organization.</p>
+                <p class="m-0 d-block">Edit the table below to manage the roles within your organization.</p>
             </div>
         </div>
         <div class="row">
