--- a/intex2/Pages/Roles/_Layout.cshtml
+++ b/intex2/Pages/Roles/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav alt-font text-black">
                             <li class="nav-item dropdown megamenu">
-                                <a class="nav-link" style="color: #000" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" style="color: #000" asp-page="List">Home</a>
                             </li>
                             <li class="nav-item dropdown megamenu">
                                 <a class="nav-link" style="color: #000" asp-page="List">Manage</a>
