in the middle of figuring out controllers and junk for Pages/Users

--- a/intex2/Pages/LogIndex.cshtml
+++ b/intex2/Pages/LogIndex.cshtml
@@ -24,12 +24,12 @@
                                 @if (Model.IdentityUser.UserName == "admin")
                                 {
                                     <a class="btn btn-fancy btn-medium btn-dark-gray" href="/Roles/List">Manage Admin Users</a>
-                                    <a class="btn btn-fancy btn-medium btn-outline-dark-gray" href="/Users/SingleEntry">Add or Edit Records</a>
+                                    <a class="btn btn-fancy btn-medium btn-outline-dark-gray" href="/Users/AddBurial">Add or Edit Records</a>
                                 }
                                 else
                                 {
                                     <a class="btn btn-fancy btn-medium btn-dark-gray" href="/Users/MomiasDatabase">Look through database</a>
-                                    <a class="btn btn-fancy btn-medium btn-outline-dark-gray" href="/Users/SingleEntry">Add or Edit Record</a>
+                                    <a class="btn btn-fancy btn-medium btn-outline-dark-gray" href="/Users/AddBurial">Add or Edit Record</a>
                                 }
                             </div>
                         </div>
