--- a/intex2/Pages/_Layout.cshtml
+++ b/intex2/Pages/_Layout.cshtml
@@ -47,7 +47,7 @@
                                 <a class="nav-link" style="color: #000" href="/Users/MomiasDatabase">Database</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="/Users/SingleEntry">Add Record</a>
+                                <a class="nav-link text-dark" href="/Users/AddBurial">Add Record</a>
                             </li>
 
                         </ul>
@@ -99,8 +99,8 @@
                         <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Research</span>
                         <ul>
                             <li><a href="/Account/Login">Log In</a></li>
-                            <li><a href="/Users/SingleEntry">Add Record</a></li>
-                            <li><a href="/">View Records</a></li>
+                            <li><a href="/Users/AddBurial">Add Record</a></li>
+                            <li><a asp-area="" asp-controller="Home" asp-action="Search">View Records</a></li>
                         </ul>
                     </div>
                     <!-- end footer column -->
