--- a/intex2/Views/_ViewImports.cshtml
+++ b/intex2/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@using intex2
 @using intex2.Models
+@using intex2.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, intex2
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Microsoft.EntityFrameworkCore
 @using System.ComponentModel.DataAnnotations
