--- a/intex2/Views/Home/Components/Filter/Default.cshtml
+++ b/intex2/Views/Home/Components/Filter/Default.cshtml
@@ -10,8 +10,8 @@
         <!-- collapsible 1 -->
         <button type="button" class="my-collapsible">Gender</button>
         <div class="my-content">
-            <input type="checkbox" class="checkbox" name="male" value="M"/> Male<br>
-            <input type="checkbox" class="checkbox" name="female" value="F"/> Female
+            <input type="checkbox" class="checkbox" name="male" value="true"/> Male<br>
+            <input type="checkbox" class="checkbox" name="female" value="true"/> Female
         </div>
 
         <!-- collapsible 2 -->
