--- a/intex2/Views/Home/Components/Filter/Default.cshtml
+++ b/intex2/Views/Home/Components/Filter/Default.cshtml
@@ -10,27 +10,37 @@
         <!-- collapsible 1 -->
         <button type="button" class="my-collapsible">Gender</button>
         <div class="my-content">
-            <input type="checkbox" class="checkbox" name="male" value="true"/> Male<br>
-            <input type="checkbox" class="checkbox" name="female" value="true"/> Female
+            <input type="checkbox" class="checkbox" name="male" value="M" /> Male<br>
+            <input type="checkbox" class="checkbox" name="female" value="F" /> Female
         </div>
 
         <!-- collapsible 2 -->
         <button type="button" class="my-collapsible">Hair Color</button>
         <div class="my-content">
-            <input type="checkbox" name="black" value="true"/> Black<br>
-            <input type="checkbox" name="blonde" value="true"/> Blonde<br>
-            <input type="checkbox" name="brown" value="true"/> Brown<br>
+            <input type="checkbox" name="black" value="black" /> Black<br>
+            <input type="checkbox" name="blonde" value="blonde" /> Blonde<br>
+            <input type="checkbox" name="brown" value="brown" /> Brown<br>
         </div>
 
         <!-- collapsible 3 -->
+        <button type="button" class="my-collapsible">Head Direction</button>
+        <div class="my-content">
+            <input type="checkbox" name="north" value="North" /> North<br>
+            <input type="checkbox" name="south" value="South" /> South<br>
+            <input type="checkbox" name="east" value="East" /> East<br>
+            <input type="checkbox" name="west" value="West" /> West<br>
+            <input type="checkbox" name="none" value="null" /> None Entered<br>
+        </div>
+
+        <!-- collapsible 4 -->
         <button type="button" class="my-collapsible">Burial Depth</button>
         <div class="my-content">
-            <input type="checkbox" name="depth" value="1"/> 0-1 meters<br>
-            <input type="checkbox" name="depth" value="2"/> 1-2 meters<br>
-            <input type="checkbox" name="depth" value="3"/> 2-3 meters<br>
-            <input type="checkbox" name="depth" value="4"/> 3-4 meters<br>
-            <input type="checkbox" name="depth" value="5"/> 4-5 meters<br>
-            <input type="checkbox" name="depth" value="6"/> 5+ meters<br>
+            <input type="checkbox" name="depth" value="1" /> 0-1 meters<br>
+            <input type="checkbox" name="depth" value="2" /> 1-2 meters<br>
+            <input type="checkbox" name="depth" value="3" /> 2-3 meters<br>
+            <input type="checkbox" name="depth" value="4" /> 3-4 meters<br>
+            <input type="checkbox" name="depth" value="5" /> 4-5 meters<br>
+            <input type="checkbox" name="depth" value="6" /> 5+ meters<br>
         </div>
 
     </div><br>
