--- a/intex2/Views/Home/Search.cshtml
+++ b/intex2/Views/Home/Search.cshtml
@@ -63,6 +63,7 @@
                                                             @if (x.BurialId == y.BurialId)
                                                             {
                                                                 <p><span class="alt-font font-weight-500 text-extra-dark-gray">Burial Depth:</span> @y.DepthRemains meters</p> <br>
+                                                                <p><span class="alt-font font-weight-500 text-extra-dark-gray">Burial Depth:</span> @y.HeadDirection</p> <br>
                                                             }
                                                         }
                                                         <form asp-action="Mummy" asp-controller="Home" method="get">
