--- a/intex2/Pages/Roles/_Layout.cshtml
+++ b/intex2/Pages/Roles/_Layout.cshtml
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-auto col-lg-2 text-right pr-0">
                     <span class="nav-bar-contact text-medium alt-font text-black font-weight-500 d-none d-sm-block">
-                        <a class="btn btn-outline-fancy" href="/Account/Login"><i class="far fa-user margin-10px-right"></i>Login</a>
+                        <a class="btn btn-outline-fancy" href="/Account/Login"><i class="far fa-user margin-10px-right"></i>Switch Accounts</a>
                     </span>
                 </div>
             </div>
@@ -94,12 +94,15 @@
                     <div class="col-12 col-md-3 col-sm-6 xs-margin-30px-bottom">
                         <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Research</span>
                         <ul>
-                            <li><a href="/Account/Login">Login</a></li>
-                            <li><a href="/Users/SingleEntry">Add Record</a></li>
-                            <li><a href="/">View Records</a></li>
+                            <li><a href="/Account/Login">Switch Accounts</a></li>
+                            <li><a href="/Users/AddBurial">Add Burial Record</a></li>
+                            <li><a href="/Users/AddArtifact">Add Artifact Record</a></li>
+                            <li><a href="/Users/AddBioSample">Add Biological Sample</a></li>
+                            <li><a href="/Users/MomiasDatabase">Manage Records</a></li>
                         </ul>
                     </div>
                     <!-- end footer column -->
+
                     <!-- start footer column -->
                     <div class="col-12 col-md-3 col-sm-6 xs-margin-30px-bottom">
                         <br>
