--- a/intex2/Pages/Account/_Layout.cshtml
+++ b/intex2/Pages/Account/_Layout.cshtml
@@ -94,7 +94,7 @@
                     <div class="col-12 col-md-3 col-sm-6 xs-margin-30px-bottom">
                         <span class="alt-font font-weight-500 d-block text-white text-uppercase text-medium margin-15px-bottom xs-margin-10px-bottom letter-spacing-1px">Research</span>
                         <ul>
-                            <li><a href="/Account/Login">Login</a></li>
+                            <li><a href="/Account/Login">Log In</a></li>
                             <li><a href="/Account/Login">Add Record</a></li>
                             <li><a href="/Account/Login">View Records</a></li>
                         </ul>
