--- a/intex2/Pages/Roles/Editor.cshtml
+++ b/intex2/Pages/Roles/Editor.cshtml
@@ -31,14 +31,7 @@
                                     <h5 class="bg-secondary text-white p-2">@Model.Role.Name</h5>
 
                                     <table class="table table-sm table-striped table-bordered">
-                                        <thead>
-                                            <tr>
-                                                <th>User</th>
-                                                <th>Email</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
-
+                                        <thead><tr><th>User</th><th>Email</th><th></th></tr></thead>
                                         <tbody>
                                             @if ((await Model.Members()).Count() == 0)
                                             {
@@ -52,25 +45,18 @@
                                                     <td>
                                                         <button asp-route-userid="@user.Id"
                                                                 class="btn btn-primary btn-sm" type="submit">
-                                                            Remove Access
+                                                            Remove
                                                         </button>
                                                     </td>
                                                 </tr>
                                             }
                                         </tbody>
-
                                     </table><br />
 
                                     <h5 class="bg-secondary text-white p-2">Non-@Model.Role.Name</h5>
 
                                     <table class="table table-sm table-striped table-bordered">
-                                        <thead>
-                                            <tr>
-                                                <th>User</th>
-                                                <th>Email</th>
-                                                <th></th>
-                                            </tr>
-                                        </thead>
+                                        <thead><tr><th>User</th><th>Email</th><th></th></tr></thead>
                                         <tbody>
                                             @if ((await Model.NonMembers()).Count() == 0)
                                             {
@@ -84,7 +70,7 @@
                                                     <td>
                                                         <button asp-route-userid="@user.Id"
                                                                 class="btn btn-primary btn-sm" type="submit">
-                                                            Make @Model.Role.Name
+                                                            Add
                                                         </button>
                                                     </td>
                                                 </tr>
@@ -122,7 +108,7 @@
 </style>
 
 
-@*<h5 class="bg-primary text-white text-center p-2">Edit Role: @Model.Role.Name</h5>
+<h5 class="bg-primary text-white text-center p-2">Edit Role: @Model.Role.Name</h5>
 <form method="post">
     <input type="hidden" name="rolename" value="@Model.Role.Name" />
     
@@ -178,9 +164,9 @@
         </tbody>
     </table>
 
-</form>*@
+</form>
 
-@*<a class="btn btn-secondary" asp-page="list">Back</a>*@
+<a class="btn btn-secondary" asp-page="list">Back</a>
 
 @functions {
     public class EditorModel : AdminPageModel
