--- a/intex2/Pages/Users/List.cshtml
+++ b/intex2/Pages/Users/List.cshtml
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row margin-5-half-rem-bottom align-items-center">
             <div class="col-12 col-lg-6 col-md-7 text-center text-md-left sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                <h5 class="alt-font font-weight-600 text-extra-dark-gray letter-spacing-minus-1px text-uppercase margin-5px-bottom">Manage Roles</h5>
+                <h5 class="alt-font font-weight-600 text-extra-dark-gray letter-spacing-minus-1px text-uppercase margin-5px-bottom">Manage Users</h5>
                 <p class="m-0 d-block">Edit the table below to manage the roles within the organization.</p>
             </div>
         </div>
@@ -90,35 +90,7 @@
 
 
 
-<table class="table table-sm table-bordered">
-    <tr><th>ID</th><th>Name</th><th>Email</th><th></th></tr>
-    @if (Model.Users.Count() == 0)
-    {
-        <tr><td colspan="4" class="text-center">No User Accounts</td></tr>
-    }
-    else
-    {
-        foreach (IdentityUser user in Model.Users)
-        {
-            <tr>
-                <td>@user.Id</td>
-                <td>@user.UserName</td>
-                <td>@user.Email</td>
-                <td class="text-center">
-                    <form asp-page="List" method="post">
-                        <input type="hidden" name="Id" value="@user.Id" />
-                        <a class="btn btn-sm btn-warning" asp-page="Editor"
-                           asp-route-id="@user.Id" asp-route-mode="edit">Edit</a>
-                        <button type="submit" class="btn btn-sm btn-danger">
-                            Delete
-                        </button>
-                    </form>
-                </td>
-            </tr>
-        }
-    }
-</table>
-<a class="btn btn-primary" asp-page="create">Create</a>
+
 @functions {
     public class ListModel : PageModel
     {
