--- a/intex2/Pages/_Layout.cshtml
+++ b/intex2/Pages/_Layout.cshtml
@@ -44,7 +44,7 @@
                                 <a class="nav-link" style="color: #000" asp-area="" asp-controller="Home" asp-action="About">About</a>
                             </li>
                             <li class="nav-item dropdown megamenu">
-                                <a class="nav-link" style="color: #000" href="/Users/MomiasDatabase">Database</a>
+                                <a class="nav-link" style="color: #000" asp-controller="Home" asp-action="MomiasDatabase">Database</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="/Users/AddBurial">Add Record</a>
