--- a/intex2/Views/Home/Search.cshtml
+++ b/intex2/Views/Home/Search.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Search";
 }
 
+@model IndexViewModel
+
 <!-- start page title -->
 <section class="p-0">
     <div class="container-fluid position-relative">
@@ -32,163 +34,60 @@
             <div class="bg-medium-dark-gray"></div>
             <div class="row">
                 <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-left text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                    <h5 class="alt-font font-weight-600 mb-0 md-w-90 sm-w-100"><strong>Filter your search</strong></h5><br>
-                    <!-- start collapsibles -->
-                    <div>
-                        <!-- collapsible 1 -->
-                        <button type="button" class="my-collapsible">Gender</button>
-                        <div class="my-content">
-                            <input type="checkbox" class="checkbox" /> Male<br>
-                            <input type="checkbox" class="checkbox" /> Female
-                        </div>
-
-                        <!-- collapsible 2 -->
-                        <button type="button" class="my-collapsible">Age</button>
-                        <div class="my-content">
-                            <input type="checkbox" class="checkbox" /> 0-5 yrs<br>
-                            <input type="checkbox" class="checkbox" /> 5-10 yrs<br>
-                            <input type="checkbox" class="checkbox" /> 10-20 yrs<br>
-                            <input type="checkbox" class="checkbox" /> 20-30 yrs<br>
-                            <input type="checkbox" class="checkbox" /> 30-50 yrs<br>
-                            <input type="checkbox" class="checkbox" /> 50+ yrs<br>
-                        </div>
-
-                        <!-- collapsible 3 -->
-                        <button type="button" class="my-collapsible">Hair Color</button>
-                        <div class="my-content">
-                            <input type="checkbox" /> Black<br>
-                            <input type="checkbox" /> Blonde<br>
-                            <input type="checkbox" /> Brown<br>
-                        </div>
-
-                        <!-- collapsible 4 -->
-                        <button type="button" class="my-collapsible">Burial Depth</button>
-                        <div class="my-content">
-                            <input type="checkbox" /> 0-1 meters<br>
-                            <input type="checkbox" /> 1-2 meters<br>
-                            <input type="checkbox" /> 2-3 meters<br>
-                            <input type="checkbox" /> 3-4 meters<br>
-                            <input type="checkbox" /> 4-5 meters<br>
-                            <input type="checkbox" /> 5+ meters<br>
-                        </div>
-
-                        <!-- collapsible 5 -->
-                        <button type="button" class="my-collapsible">Length</button>
-                        <div class="my-content">
-                            <input type="checkbox" /> 0.0 - 0.5 m<br>
-                            <input type="checkbox" /> 0.5 - 0.1 m<br>
-                            <input type="checkbox" /> 1.0 - 1.5 m<br>
-                            <input type="checkbox" /> 1.5 - 2.0 m<br>
-                            <input type="checkbox" /> 2.0+ m<br>
-                        </div>
-                    </div><br>
-                    <a asp-action="#"><input class="btn btn-fancy btn-medium btn-dark-gray" value="Search" /></a>
-                    <!-- end collapsibles -->
+                    <vc:filter/>
                 </div>
-                <!-- Card 1 (placeholder) -->
-                <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
-                    <h5 class="alt-font text-black font-weight-700 mb-0 md-w-90 sm-w-100"><strong>Search results</strong></h5>
-                    <i>Click on the burial to learn more</i>
-                    <div>
-                        <br>
-                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
-                            <a asp-controller="Home" asp-action="Mummy">
-                                <div class="row">
-                                    <div class="col-12 text-center" style="max-width: 1200px">
-                                        <div class="bg-medium"></div>
-                                        <div class="row">
-                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                                                <img src="/images/mummy1.jpg" width="90%">
-                                            </div>
-                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
-                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Devan<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
+                    <!-- Card 1 (placeholder) -->
+                    <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                        <h5 class="alt-font text-black font-weight-700 mb-0 md-w-90 sm-w-100"><strong>Search results</strong></h5>
+                        <div>
+                            <br>
+                            @foreach (var x in Model.Remains)
+                            {
+                                <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
+                                    <div class="row">
+                                        <div class="col-12 text-center" style="max-width: 1200px">
+                                            <div class="bg-medium"></div>
+                                            <div class="row">
+                                                <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                                                    <img src="/images/mummy1.jpg" width="90%">
+                                                </div>
+                                                <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
+                                                    <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
+
+                                                        <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> @x.BurialId<br>
+                                                        <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> @x.GenderBodyCol<br>
+                                                        <span class="alt-font font-weight-500 text-extra-dark-gray">Hair Color:</span> @x.HairColor<br>
+                                                        <span class="alt-font font-weight-500 text-extra-dark-gray">Age:</span> @x.EstimateAge<br>
+                                                        @foreach (var y in Model.Burials)
+                                                        {
+                                                            @if (x.BurialId == y.BurialId)
+                                                            {
+                                                                <p><span class="alt-font font-weight-500 text-extra-dark-gray">Burial Depth:</span> @y.DepthRemains meters</p> <br>
+                                                                <p><span class="alt-font font-weight-500 text-extra-dark-gray">Burial Depth:</span> @y.HeadDirection</p> <br>
+                                                            }
+                                                        }
+                                                        <form asp-action="Mummy" asp-controller="Home" method="get">
+                                                            <input type="hidden" name="Id" value="@x.BurialId" />
+                                                            <button type="submit" class="btn btn-sm btn-primary">
+                                                                View All Record Info
+                                                            </button>
+                                                        </form>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
-                    </div><br>
-                    <!-- Card 2 (placeholder) -->
-                    <div>
-                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
-                            <a asp-controller="Home" asp-action="Mummy">
-                                <div class="row">
-                                    <div class="col-12 text-center" style="max-width: 1200px">
-                                        <div class="bg-medium"></div>
-                                        <div class="row">
-                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                                                <img src="/images/mummy2.jpg" width="90%">
-                                            </div>
-                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
-                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Tyler<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div><br>
-                    <!-- Card 3 (placeholder) -->
-                    <div>
-                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
-                            <a asp-controller="Home" asp-action="Mummy">
-                                <div class="row">
-                                    <div class="col-12 text-center" style="max-width: 1200px">
-                                        <div class="bg-medium"></div>
-                                        <div class="row">
-                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                                                <img src="/images/mummy3.jpg" width="90%">
-                                            </div>
-                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
-                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Grace<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Female<br>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div><br>
-                    <!-- Card 4 (placeholder) -->
-                    <div>
-                        <div class="swiper-slide box-shadow-small box-shadow-extra-large-hover">
-                            <a asp-controller="Home" asp-action="Mummy">
-                                <div class="row">
-                                    <div class="col-12 text-center" style="max-width: 1200px">
-                                        <div class="bg-medium"></div>
-                                        <div class="row">
-                                            <div class="col-12 col-xl-4 col-md-3 col-sm-10 align-items-center text-black text-md-left sm-margin-30px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
-                                                <img src="/images/mummy4.jpg" width="90%">
-                                            </div>
-                                            <div class="col-12 col-xl-8 col-md-9 text-center text-md-left wow animate__fadeIn" data-wow-delay="0.2s">
-                                                <div class="position-relative bg-white padding-2-rem-all md-padding-2-rem-lr">
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Name:</span> Sal<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Location:</span> 120/130 N 10/20 NW #49,50<br>
-                                                    <span class="alt-font font-weight-500 text-extra-dark-gray">Gender:</span> Male<br>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
+                            }
+                            <div page-info="@Model.pageNum"
+                                 page-classes-enabled="true"
+                                 page-class="btn" page-class-normal="btn-outline-dark"
+                                 page-class-selected="btn-primary">
+                            </div>
+                        </div><br>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
     </div>
 </section>
 <!-- end section -->
